Add heading noting the bugginess of site

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,12 @@
 {% block content %}
 
     <div class="container-fluid items-container front-page-header">
+        <!-- Message to potential employers that site is buggy upon deployment and hosting -->
+        <h2>***Note to prospective employers*** The website's cart became extremely buggy after deployment and site
+            hosting, and I am working to resolve the issue. Please feel free to
+            <a href="https://github.com/ChrisHuynh333/shop-chris">download</a> the files from GitHub and host the
+            site locally.
+        </h2>
         <!--
         If the user is not logged in, they'll get a generic greeting with links to Log In or Register. Otherwise,
         the home page will greet them with their name and only the Shop Now link
